force-app/main/default/objects/System_Tutorial__c/System_Tutorial__c.object-meta.xml
<CustomObject>
    <description>The purpose of this object is to store video tutorials relating to usage of the Pario Software Platform</description>
    <label>System Tutorial</label>
    <nameField>
        <label>System Tutorial Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>System Tutorials</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>