force-app/main/default/objects/System_Tutorial__c/fields/Relevant_Profile__c.field-meta.xml
<CustomField>
    <fullName>Relevant_Profile__c</fullName>
    <description>Allows filtering of lists by relevant profile.</description>
    <label>Relevant Profile</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>System Administrator</fullName>
            </value>
            <value>
                <fullName>Administration</fullName>
            </value>
            <value>
                <fullName>Nursing</fullName>
            </value>
            <value>
                <fullName>Laboratory</fullName>
            </value>
            <value>
                <fullName>Doctors</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>