force-app/main/default/objects/System_Tutorial__c/fields/Video_ID__c.field-meta.xml
<CustomField>
    <fullName>Video_ID__c</fullName>
    <label>Video ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>